@@ -50,7 +50,20 @@ void MainWindow::closeEvent(QCloseEvent *event)
   //We cannot quit while there is a running transaction!
   if(m_commandExecuting != ectn_NONE)
   {
-    event->ignore();
+    int res = QMessageBox::question(this, StrConstants::getConfirmation(),
+                          StrConstants::getThereIsARunningTransaction() + "\n" +
+                          StrConstants::getDoYouReallyWantToQuit(),
+                          QMessageBox::Yes | QMessageBox::No,
+                          QMessageBox::No);
+    if (res == QMessageBox::Yes)
+    {
+      event->accept();
+      qApp->quit();
+    }
+    else
+    {
+      event->ignore();
+    }
   }
   else if(isThereAPendingTransaction())
   {
