@@ -181,6 +181,7 @@ public:
   static QString getOnceADayAtDesc();
   static QString getOnceEvery();
   static QString getOnceEveryDesc();
+  static QString getNever();
   static QString getSetInterval();
   static QString getUpgrading();
 
