@@ -525,7 +525,7 @@ void WMHelper::openDirectory( const QString& dirName ){
 /*
  * Opens a terminal based on your DE.
  */
-void WMHelper::openTerminal(const QString& dirName)
+/*void WMHelper::openTerminal(const QString& dirName)
 {
   QFileInfo f(dirName);
 
@@ -534,4 +534,4 @@ void WMHelper::openTerminal(const QString& dirName)
     Terminal *term = new Terminal(0, SettingsManager::getTerminal());
     term->openTerminal(dirName);
   }
-}
+}*/
