@@ -49,7 +49,7 @@ public:
   static void openFile(const QString& fileName); //fileName is Path + Name
   static void editFile(const QString& fileName , EditOptions opt = ectn_EDIT_AS_ROOT); //fileName is Path + Name
   static void openDirectory( const QString& dirName );
-  static void openTerminal( const QString& dirName );
+  //static void openTerminal( const QString& dirName );
 };
 
 #endif // WMHELPER_H
